unpackaged/main/default/objects/CS_Flow_Tertiary_Category_Setting__mdt/CS_Flow_Tertiary_Category_Setting__mdt.object-meta.xml
<CustomObject>
    <label>CS Flow Tertiary Category Setting</label>
    <pluralLabel>CS Flow Tertiary Category Settings</pluralLabel>
</CustomObject>