unpackaged/main/default/objects/CS_Flow_Tertiary_Category_Setting__mdt/fields/Access_Groups__c.field-meta.xml
<CustomField>
    <fullName>Access_Groups__c</fullName>
    <defaultValue>"CS,EXTERNAL,ADMIN,EMPLOYEE"</defaultValue>
    <label>Access Groups</label>
    <type>TextArea</type>
</CustomField>