unpackaged/main/default/objects/CS_Flow_Tertiary_Category_Setting__mdt/fields/CS_Flow_Secondary_Category_Setting__c.field-meta.xml
<CustomField>
    <fullName>CS_Flow_Secondary_Category_Setting__c</fullName>
    <label>CS Flow Secondary Category Setting</label>
    <referenceTo>CS_Flow_Secondary_Category_Setting__mdt</referenceTo>
    <relationshipLabel>CS Flow Tertiary Category Settings</relationshipLabel>
    <relationshipName>CS_Flow_Tertiary_Category_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>