unpackaged/main/default/objects/CS_Flow_Tertiary_Category_Setting__mdt/listViews/Bottle_Consumer.listView-meta.xml
<ListView>
    <fullName>Bottle_Consumer</fullName>
    <columns>MasterLabel</columns>
    <columns>Access_Groups__c</columns>
    <columns>Countries__c</columns>
    <columns>CS_Flow_Picklist_Setting__c</columns>
    <columns>CS_Flow_Secondary_Category_Setting__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CS_Flow_Secondary_Category_Setting__c</field>
        <operation>equals</operation>
        <value>Bottle_Consumer</value>
    </filters>
    <label>Bottle - Consumer</label>
    <language>en_US</language>
</ListView>